welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:17: error: '(' expected but '{' found.
			else if {
                                ^